--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -1,9 +1,12 @@
 \documentclass[11pt,a4paper]{article}
 
+    % Adaptado do arquivo Latex criado pelo Jupyter Notebook
     \usepackage{indentfirst}
     \usepackage{listings}
     \usepackage{float}
     \usepackage[T1]{fontenc}
+    \usepackage[portuguese]{babel}
+
     % Nicer default font (+ math font) than Computer Modern for most use cases
     \usepackage{mathpazo}
 
@@ -24,9 +27,9 @@
     % Ensure that by default, figures have no caption (until we provide a
     % proper Figure object with a Caption API and a way to capture that
     % in the conversion process - todo).
-    \usepackage{caption}
-    \DeclareCaptionLabelFormat{nolabel}{}
-    \captionsetup{labelformat=nolabel}
+    % \usepackage{caption}
+    % \DeclareCaptionLabelFormat{nolabel}{}
+    % \captionsetup{labelformat=nolabel}
 
     \usepackage{adjustbox} % Used to constrain images to a maximum size
     \usepackage{xcolor} % Allow colors to be defined
